--- a/index.html
+++ b/index.html
@@ -3,9 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tawsif Karim</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <ul>
+        <li><a class="active" href="#home">Contact</a></li>
+        <li><a href="#news">Portfolio</a></li>
+        <li><a href="#contact">Work</a></li>
+        <li><a href="#about">Abour</a></li>
+      </ul>
+    <section class="top-banner">
+        <div class="half-width">
+        <h1>Welcome to</h1>
+        <h1><span class= "highlight">Mukarrabin's</span> World</h1>
+        <h3>World-class Web Developer</h3>
+        <p>I am a worldclass web developer and I develop website because I love web developing. I earn miney by developing.  I dont get bored while developing.</p>
+        <a class="link-button" target="_blank" href="https://www.linkedin.com/in/chowdhury-mukarrabin-al-karim-b1b678158/"> Hire me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/pp1.jpg" alt="">
+        </div>
+    </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/profile1.jpg" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>Become a good developer</h3>
+            <p>I am a worldclass web developer and I develop website because I love web developing. I earn miney by developing.  I dont get bored while developing.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/chowdhury-mukarrabin-al-karim-b1b678158/">My CV</a>
+        </div>
+
+    </section>
+   
+    <section class="part-three">
+        <div>
+        <h2 id="middle-algn">Latest working project</h2>
+        </div>
+        <div class="full-box">
+        <div class="one-third" id="">
+            <img src="images/image 4.png" alt="">
+            <h4><span class= "highlight">Power-X-Gym (Gym website)</span></h4>
+           <p>Lorem Ipsum is simply dummy text of the  printing and typesetting industry. </p>
+        </div>
+        <div class="one-third" id="">
+            <img src="images/image 5.png" alt="">
+            <h4><span class= "highlight">Creative Agency</span></h4>
+            <p>Lorem Ipsum is simply dummy text of the  printing and typesetting industry.</p>
+
+        </div>
+        <div class="one-third" id="">
+            <img src="images/image 8.png" alt="">
+            <h4><span class= "highlight">Hard Rock Music</span></h4>
+            <p>Lorem Ipsum is simply dummy text of the  printing and typesetting industry.</p>
+
+        </div>
+    </div>
+
+    </section>
+    <section>
+        <div class="last-part"  >
+            <div class="half-width1">
+                <h1>hello</h1>
+            </div>
+            <div class="half-width1">
+                <a class="link-button" target="_blank" href="">Lets Chat!</a>
+            </div>    
+        </div>
+    </section>
+    <footer>
+        <p>Copyright protected by Mukarrabin</p>
+    </footer>
 </body>
 </html>
