--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tawsif Karim</title>
+    <title>Mukarrabin</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <ul>
-        <li><a class="active" href="#home">Contact</a></li>
-        <li><a href="#news">Portfolio</a></li>
-        <li><a href="#contact">Work</a></li>
-        <li><a href="#about">Abour</a></li>
+        <li><a href="">Contact</a></li>
+        <li><a href="">Portfolio</a></li>
+        <li><a href="">Work</a></li>
+        <li><a href="">About</a></li>
       </ul>
+
     <section class="top-banner">
         <div class="half-width">
         <h1>Welcome to</h1>
@@ -68,7 +69,7 @@
     <section>
         <div class="last-part"  >
             <div class="half-width1">
-                <h1>hello</h1>
+                <h2>WORK INQUIRY</h2>
             </div>
             <div class="half-width1">
                 <a class="link-button" target="_blank" href="">Lets Chat!</a>
